Enable nullness checking for anansi-postgres